# MCP_PROJECT

./: .gitignore  README.md  agentic_rag.py  client.py  client_new.py  pyproject.toml  server.py
tools/: document_retrieval.py  web_search.py
utils/: document_utils.py  embeddings.py  initiate_mcp.py  openai_call.py
vector_store/: pinecone_db.py
